# nexus-platform-clean

./: ..cursor.ssot  ..env.production.ssot  ..env.ssot  ..github.ssot  ..gitignore.ssot  ..husky.ssot  ..infrastructure.ssot  ..monitoring.ssot  ..pre-commit-config.yaml.ssot  ..pytest_cache.ssot  ..taskmaster.ssot  ..venv.ssot  .ARCHITECTURE_OVERVIEW.md.ssot  .Dockerfile.backend.ssot  .Dockerfile.frontend.ssot  .Dockerfile.prod.ssot  .Dockerfile.production.ssot  .Dockerfile.ssot  .FINAL_CLEANUP_AND_OPTIMIZATION_COMPLETE.md.ssot  .FINAL_PRODUCTION_READY_SUMMARY.md.ssot  .IMPLEMENTATION_COMPLETE_FINAL.md.ssot  .NEXUS_PLATFORM_DOCUMENTATION.md.ssot  .PRODUCTION_READINESS_REPORT.md.ssot  .README.md.ssot  .SECURITY_AUDIT_REPORT.md.ssot  .advanced_lock_manager.py.ssot  .ai-analytics.ssot  .archival_script.py.ssot  .archive_manager.py.ssot  .babel.config.js.ssot  .backend.ssot  .check-deployment.sh.ssot  .cleanup_and_archive.py.ssot  .coordination-hub.ssot  .data.ssot  .database.ssot  .demo-docker-deployment.sh.ssot  .demo_production_system.py.ssot  .deploy-docker.sh.ssot  .deploy-k8s.sh.ssot  (+137 more)
.github/: dependabot.yml
.husky/: pre-commit
.taskmaster/: config.json
ai-analytics/: ai-analytics-engine.py
backend/: .requirements.txt.ssot  README.md  api_gateway.py  config.yaml  enhanced_api.py  main_simple.py  main_unified.py  requirements.txt
config/: .gitignore  .snyk  .trivyignore  alias_governance.yaml  app_settings.yaml  backend.env.development  backend.env.production  caching.yaml  config_manager.py  constants.py  database.yaml  docker.env  environment.example  environments.yaml  file_lock_manager.py  frenly_ai_meta.yaml  frontend.env.development  frontend.env.production  monitoring.yaml  optimization_schedule.yaml  optimization_thresholds.yaml  policies.yaml  production.env  production.env.template  pytest.ini  safe_file_operations.py  security.yaml  ssot_documentation_config.yaml  (+2 more)
(+2271 files in other folders)
